feat: connect to firebase

--- a/myApp/package.json
+++ b/myApp/package.json
@@ -29,6 +29,7 @@
         "@ionic/angular": "^5.0.0",
         "@ionic/pwa-elements": "^3.0.1",
         "firebase": "^7.21.1",
+        "firebase-admin": "^9.2.0",
         "rxjs": "~6.5.5",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.3"
